--- a/.coveragerc
+++ b/.coveragerc
@@ -17,6 +17,8 @@ omit =
         hummingbot/connector/exchange/foxbit*
         hummingbot/connector/derivative/dydx_v4_perpetual/*
         hummingbot/connector/derivative/dydx_v4_perpetual/data_sources/*
+        hummingbot/connector/derivative/ab_perpetual/*
+        hummingbot/connector/derivative/ab_perpetual/data_sources/*
         hummingbot/connector/exchange/injective_v2/account_delegation_script.py
         hummingbot/connector/exchange/paper_trade*
         hummingbot/connector/gateway/**
